--- a/app/src/main/res/layout/activity_passwordchange_page.xml
+++ b/app/src/main/res/layout/activity_passwordchange_page.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="19sp"
         android:layout_marginBottom="20sp"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
         android:textSize="25sp" />
 
     <TextView
@@ -55,8 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="19sp"
         android:layout_marginBottom="20sp"
-        android:inputType="textEmailAddress"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:inputType="textPassword"/>
 
 
 
