--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".forget_page"
+    tools:context=".welcome"
     android:orientation="vertical">
 
     <TextView
@@ -20,43 +20,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fptvforgetpassword"
-        android:text="Forget Password "
+        android:text="WELCOME USER"
         android:textStyle="bold"
         android:textSize="25sp"
         android:textColor="@color/black"
         android:textAlignment="center"
         android:layout_marginTop="120sp"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/fptventeremail"
-        android:layout_marginStart="15sp"
-        android:layout_marginTop="40sp"
-        android:text="Enter your Registered Email"
-        android:textSize="18sp"
-        />
-
-    <EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/fpetenteremail"
-    android:textSize="20sp"
-    android:layout_margin="20sp"
-    android:inputType="textEmailAddress"
-
-
-    />
-
-    <Button
-        android:id="@+id/fpbtngetotp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get otp"
-        android:layout_margin="10sp"
-        android:gravity="center"
-        android:layout_gravity="center"
         />
 
 </LinearLayout>
